Fix chat position and set scrollbar to list of correc players

--- a/src/css/Streaming AMQ Game UI/Components/chat.scss
+++ b/src/css/Streaming AMQ Game UI/Components/chat.scss
@@ -4,7 +4,7 @@
 	@include blur;
 	height: 328px;
 	position: fixed;
-	bottom: 42vh;
+	bottom: 46.5vh;
   right: 5px;
 	width: 426px;
 }
