--- a/src/css/Streaming AMQ Game UI/Components/correctplayerlist.scss
+++ b/src/css/Streaming AMQ Game UI/Components/correctplayerlist.scss
@@ -11,7 +11,7 @@
 	margin-top: 4px;
 	text-align: left;
 	height: 90px;
-	overflow: hidden;
+	overflow: auto;
 	h5 {
 		margin: 0;
 	}
